syntax = "proto3";
package crescent.mint.v1beta1;

option go_package = "github.com/crescent-network/crescent/x/mint/types";

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

// Params holds parameters for the mint module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  // type of coin to mint
  string mint_denom = 1;

  google.protobuf.Duration block_time_threshold = 2 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag)     = "block_time_threshold,omitempty",
    (gogoproto.moretags)    = "yaml:\"block_time_threshold\""
  ];
}

message InflationPeriod {
  google.protobuf.Timestamp start_time = 1
    [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"start_time\""];
  google.protobuf.Timestamp end_time = 2
    [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"end_time\""];
  string amount = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}