syntax = "proto3";
package squad.claim.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package                      = "github.com/cosmosquad-labs/squad/x/claim/types";
option (gogoproto.goproto_getters_all) = false;

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
}

message ClaimRecord {
  string address = 1;

  repeated cosmos.base.v1beta1.Coin initial_claimable_coins = 2
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];

  bool deposit_action_claimed = 3;
      
  bool swap_action_claimed = 4;

  bool farming_action_claimed = 5;
}